<resources>
	<string name="app_name">Hangr</string>
	<string name="register">Register</string>
	<string name="login">Login</string>
	<!-- Strings related to Activities -->
	<string name="title_activity_login">Welcome</string>
	<string name="title_activity_new_clothes">Add Clothes</string>
	<string name="title_activity_create_outfit">Outfits</string>
	<string name="title_activity_closet_gallery">Closet</string>
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password (optional)</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
	<string name="password">Password</string>
	<string name="username">Username</string>
	<string name="log_in">Log In</string>
	<string name="don_t_have_an_account">Don\'t have an account?</string>
	<string name="already_have_an_account">already have an account?</string>
	<string name="welcome">Welcome</string>
	<!-- Strings related to bottomNavigation -->
	<string name="title_new_clothes">Add Clothes</string>
	<string name="title_closet">Closet</string>
	<string name="title_outfits">Outfits</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="hangr">Hangr</string>
	<string name="bypass_login">Bypass Login</string>
    <string name="hampr">Hampr</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
3	<string name="delete">Delete</string>
    <string name="uploading_image_percentage">uploading image… %1$d%%</string>
    <string name="finish">Finish</string>
	<string name="name">Name</string>
	<string name="category">Category</string>
	<string name="wears_before_wash">Wears Before Wash</string>
    <string name="default_chip_text">default chip text</string>
	<string name="colors">Colors</string>
	<string name="tags">Tags</string>
    <string name="filter">Filter</string>
    <string name="filter_prompt">Filter...</string>
    <string name="categories">Categories</string>
</resources>
